separate back and front

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>AirBNB Auto</title>
+	<title>AirBNB Auto</title> -->
 	<!-- <base href="C:/Users/JT-PC/Desktop/Push-Drive/DayWon/S.Rakidzich/Blog-Flask/static"> -->
 	<!-- <base href="C:/Program Files/Git/static/"> -->
-	<base href="/">
+	<!-- <base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 	<app-root></app-root>
+
 	<script type="text/javascript" src="/static/runtime-es2015.js" type="module"></script>
 	<script type="text/javascript" src="/static/polyfills-es2015.js" type="module"></script>
 	<script type="text/javascript" src="/static/runtime-es5.js" nomodule></script>
@@ -24,4 +25,28 @@
 	<script type="text/javascript" src="/static/vendor-es5.js" nomodule></script>
 	<script type="text/javascript" src="/static/main-es5.js" nomodule></script>
 </body>
-</html>
+</html> -->
+
+<!-- <!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>AirBNBBlog</title>
+	<base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="/static/styles.80600dc7af05045db00c.css">
+</head>
+	<body>
+		<app-root></app-root>
+		<script type="text/javascript" src="/static/runtime-es2015.bc95a571af4e8dae3c62.js" type="module"></script>
+		<script type="text/javascript" src="/static/polyfills-es2015.adc786f3cb99e1916f0c.js" type="module"></script>
+		<script type="text/javascript" src="/static/runtime-es5.050c4ab1828cb1568fea.js" nomodule></script>
+		<script type="text/javascript" src="/static/polyfills-es5.15cd4a4ca748967ee202.js" nomodule></script>
+		<script type="text/javascript" src="/static/scripts.abc521399cddc9dfff22.js"></script>
+		<script type="text/javascript" src="/static/main-es2015.07ac9a107b24eb5fa7bb.js" type="module"></script>
+		<script type="text/javascript" src="/static/main-es5.cb7bbb77994a621ee480.js" nomodule></script>
+	</body>
+	</html>
+ -->
